src/main/java/uk/co/jackoftrades/backend/io/parsers/antlr/curse/CurseReaderParser.java
// Generated from C:/Users/rowan/Documents/IntelliJProjects/Angband.4.2.6/src/main/java/uk/co/jackoftrades/backend/io/parsers/antlr/grammars/CurseReader.g4 by ANTLR 4.13.2
package uk.co.jackoftrades.backend.io.parsers.antlr.curse;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;
import uk.co.jackoftrades.middle.enums.EffectBaseType;
import uk.co.jackoftrades.middle.enums.EffectEnum;
import uk.co.jackoftrades.middle.enums.ValueEnum;
import uk.co.jackoftrades.middle.game.Game;
import uk.co.jackoftrades.middle.monsters.enums.MonsterRaceFlag;
import uk.co.jackoftrades.middle.objects.Curse;
import uk.co.jackoftrades.middle.objects.ObjectBase;
import uk.co.jackoftrades.middle.objects.enums.ObjectFlag;
import uk.co.jackoftrades.middle.objects.enums.TValue;
import uk.co.jackoftrades.middle.player.enums.TimedEffect;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CurseReaderParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			COMMENT = 1, EOL = 2, NAME = 3, TYPE = 4, WEIGHT = 5, COMBAT = 6, EFFECT = 7, DICE = 8,
			EXPR = 9, TIME = 10, FLAGS = 11, VALUES = 12, MSG = 13, DESC = 14, CONFLICT = 15, CONFLICT_FLAGS = 16,
			VALUE = 17, TEXT = 18, COLON = 19, OR = 20;
	public static final int
			RULE_name = 0, RULE_type = 1, RULE_combat = 2, RULE_effect = 3, RULE_dice = 4,
			RULE_expr = 5, RULE_time = 6, RULE_flags = 7, RULE_values = 8, RULE_msg = 9,
			RULE_desc = 10, RULE_conflict = 11, RULE_conflict_flags = 12, RULE_curse = 13,
			RULE_curses = 14;

	private static String[] makeRuleNames() {
		return new String[]{
				"name", "type", "combat", "effect", "dice", "expr", "time", "flags",
				"values", "msg", "desc", "conflict", "conflict_flags", "curse", "curses"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[]{
				null, null, null, "'name:'", "'type:'", "'weight'", "'combat:'", "'effect:'",
				"'dice:'", "'expr:'", "'time:'", "'flags:'", "'values:'", "'msg:'", "'desc:'",
				"'conflict:'", "'conflict-flags:'", null, null, "':'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[]{
				null, "COMMENT", "EOL", "NAME", "TYPE", "WEIGHT", "COMBAT", "EFFECT",
				"DICE", "EXPR", "TIME", "FLAGS", "VALUES", "MSG", "DESC", "CONFLICT",
				"CONFLICT_FLAGS", "VALUE", "TEXT", "COLON", "OR"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "CurseReader.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public CurseReaderParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public String nameStr;
		public Token TEXT;

		public TerminalNode NAME() {
			return getToken(CurseReaderParser.NAME, 0);
		}

		public TerminalNode TEXT() {
			return getToken(CurseReaderParser.TEXT, 0);
		}

		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_name;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).enterName(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).exitName(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CurseReaderVisitor)
				return ((CurseReaderVisitor<? extends T>) visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(30);
				match(NAME);
				setState(31);
				((NameContext) _localctx).TEXT = match(TEXT);

				((NameContext) _localctx).nameStr = ((NameContext) _localctx).TEXT.getText();

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public ObjectBase typeBase;
		public Token TEXT;

		public TerminalNode TYPE() {
			return getToken(CurseReaderParser.TYPE, 0);
		}

		public TerminalNode TEXT() {
			return getToken(CurseReaderParser.TEXT, 0);
		}

		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_type;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).enterType(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).exitType(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CurseReaderVisitor)
				return ((CurseReaderVisitor<? extends T>) visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(34);
				match(TYPE);
				setState(35);
				((TypeContext) _localctx).TEXT = match(TEXT);

				String tValName = ((TypeContext) _localctx).TEXT.getText();
				TValue tVal = TValue.fromName(tValName);
				((TypeContext) _localctx).typeBase = Game.getBaseFromTVal(tVal);

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CombatContext extends ParserRuleContext {
		public int toHitVal;
		public int toDamVal;
		public int acVal;
		public Token toHit;
		public Token toDam;
		public Token ac;

		public TerminalNode COMBAT() {
			return getToken(CurseReaderParser.COMBAT, 0);
		}

		public List<TerminalNode> COLON() {
			return getTokens(CurseReaderParser.COLON);
		}

		public TerminalNode COLON(int i) {
			return getToken(CurseReaderParser.COLON, i);
		}

		public List<TerminalNode> TEXT() {
			return getTokens(CurseReaderParser.TEXT);
		}

		public TerminalNode TEXT(int i) {
			return getToken(CurseReaderParser.TEXT, i);
		}

		public CombatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_combat;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).enterCombat(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).exitCombat(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CurseReaderVisitor)
				return ((CurseReaderVisitor<? extends T>) visitor).visitCombat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CombatContext combat() throws RecognitionException {
		CombatContext _localctx = new CombatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_combat);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(38);
				match(COMBAT);
				setState(39);
				((CombatContext) _localctx).toHit = match(TEXT);
				setState(40);
				match(COLON);
				setState(41);
				((CombatContext) _localctx).toDam = match(TEXT);
				setState(42);
				match(COLON);
				setState(43);
				((CombatContext) _localctx).ac = match(TEXT);

				((CombatContext) _localctx).toHitVal = Integer.parseInt(((CombatContext) _localctx).toHit.getText());
				((CombatContext) _localctx).toDamVal = Integer.parseInt(((CombatContext) _localctx).toDam.getText());
				((CombatContext) _localctx).acVal = Integer.parseInt(((CombatContext) _localctx).ac.getText());

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EffectContext extends ParserRuleContext {
		public EffectEnum effectEnum;
		public TimedEffect timedEnum;
		public MonsterRaceFlag summon;
		public Token effEnum;
		public Token tmdEnum;

		public TerminalNode EFFECT() {
			return getToken(CurseReaderParser.EFFECT, 0);
		}

		public List<TerminalNode> TEXT() {
			return getTokens(CurseReaderParser.TEXT);
		}

		public TerminalNode TEXT(int i) {
			return getToken(CurseReaderParser.TEXT, i);
		}

		public TerminalNode COLON() {
			return getToken(CurseReaderParser.COLON, 0);
		}

		public EffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_effect;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).enterEffect(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).exitEffect(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CurseReaderVisitor)
				return ((CurseReaderVisitor<? extends T>) visitor).visitEffect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EffectContext effect() throws RecognitionException {
		EffectContext _localctx = new EffectContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_effect);

		((EffectContext) _localctx).timedEnum = TimedEffect.TMD_NULL;
		((EffectContext) _localctx).effectEnum = EffectEnum.EF_NONE;
		((EffectContext) _localctx).summon = MonsterRaceFlag.RF_NONE;
		String effectType = "Timed";

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(46);
				match(EFFECT);
				setState(47);
				((EffectContext) _localctx).effEnum = match(TEXT);

				String effectEnumStr = "EF_" + ((EffectContext) _localctx).effEnum.getText().trim();
				((EffectContext) _localctx).effectEnum = EffectEnum.valueOf(effectEnumStr);
				if (effectEnumStr.equals("EF_SUMMON"))
					effectType = "Summon";

				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == COLON) {
					{
						setState(49);
						match(COLON);
						setState(50);
						((EffectContext) _localctx).tmdEnum = match(TEXT);

						if (((EffectContext) _localctx).tmdEnum != null) {
							if (effectType.equals("Timed"))
								((EffectContext) _localctx).timedEnum = TimedEffect.valueOf("TMD_" + ((EffectContext) _localctx).tmdEnum.getText().trim());
							else
								((EffectContext) _localctx).summon = MonsterRaceFlag.valueOf("RF_" + ((EffectContext) _localctx).tmdEnum.getText().trim());
						}

					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DiceContext extends ParserRuleContext {
		public String diceString;
		public Token TEXT;

		public TerminalNode DICE() {
			return getToken(CurseReaderParser.DICE, 0);
		}

		public TerminalNode TEXT() {
			return getToken(CurseReaderParser.TEXT, 0);
		}

		public DiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_dice;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).enterDice(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).exitDice(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CurseReaderVisitor)
				return ((CurseReaderVisitor<? extends T>) visitor).visitDice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DiceContext dice() throws RecognitionException {
		DiceContext _localctx = new DiceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dice);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(54);
				match(DICE);
				setState(55);
				((DiceContext) _localctx).TEXT = match(TEXT);

				((DiceContext) _localctx).diceString = ((DiceContext) _localctx).TEXT.getText();

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public char letter;
		public EffectBaseType effectBaseType;
		public String operation;
		public Token codeLetter;
		public Token efbType;
		public Token operations;

		public TerminalNode EXPR() {
			return getToken(CurseReaderParser.EXPR, 0);
		}

		public List<TerminalNode> COLON() {
			return getTokens(CurseReaderParser.COLON);
		}

		public TerminalNode COLON(int i) {
			return getToken(CurseReaderParser.COLON, i);
		}

		public List<TerminalNode> TEXT() {
			return getTokens(CurseReaderParser.TEXT);
		}

		public TerminalNode TEXT(int i) {
			return getToken(CurseReaderParser.TEXT, i);
		}

		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_expr;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).enterExpr(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).exitExpr(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CurseReaderVisitor)
				return ((CurseReaderVisitor<? extends T>) visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(58);
				match(EXPR);
				setState(59);
				((ExprContext) _localctx).codeLetter = match(TEXT);
				setState(60);
				match(COLON);
				setState(61);
				((ExprContext) _localctx).efbType = match(TEXT);
				setState(62);
				match(COLON);
				setState(63);
				((ExprContext) _localctx).operations = match(TEXT);

				((ExprContext) _localctx).letter = ((ExprContext) _localctx).codeLetter.getText().charAt(0);

				String efbString = "EFB_" + ((ExprContext) _localctx).efbType.getText().trim();
				((ExprContext) _localctx).effectBaseType = EffectBaseType.valueOf(efbString);

				((ExprContext) _localctx).operation = ((ExprContext) _localctx).operations.getText();

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TimeContext extends ParserRuleContext {
		public String timeString;
		public Token TEXT;

		public TerminalNode TIME() {
			return getToken(CurseReaderParser.TIME, 0);
		}

		public TerminalNode TEXT() {
			return getToken(CurseReaderParser.TEXT, 0);
		}

		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_time;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).enterTime(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).exitTime(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CurseReaderVisitor)
				return ((CurseReaderVisitor<? extends T>) visitor).visitTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_time);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(66);
				match(TIME);
				setState(67);
				((TimeContext) _localctx).TEXT = match(TEXT);

				((TimeContext) _localctx).timeString = ((TimeContext) _localctx).TEXT.getText();

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FlagsContext extends ParserRuleContext {
		public ArrayList<ObjectFlag> flagArray;
		public Token flag1;
		public Token flag2;

		public TerminalNode FLAGS() {
			return getToken(CurseReaderParser.FLAGS, 0);
		}

		public List<TerminalNode> TEXT() {
			return getTokens(CurseReaderParser.TEXT);
		}

		public TerminalNode TEXT(int i) {
			return getToken(CurseReaderParser.TEXT, i);
		}

		public List<TerminalNode> OR() {
			return getTokens(CurseReaderParser.OR);
		}

		public TerminalNode OR(int i) {
			return getToken(CurseReaderParser.OR, i);
		}

		public FlagsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_flags;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).enterFlags(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).exitFlags(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CurseReaderVisitor)
				return ((CurseReaderVisitor<? extends T>) visitor).visitFlags(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlagsContext flags() throws RecognitionException {
		FlagsContext _localctx = new FlagsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_flags);

		((FlagsContext) _localctx).flagArray = new ArrayList<>();

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(70);
				match(FLAGS);
				setState(71);
				((FlagsContext) _localctx).flag1 = match(TEXT);

				String flag1String = "OF_" + ((FlagsContext) _localctx).flag1.getText().trim();
				ObjectFlag objectFlag1 = ObjectFlag.valueOf(flag1String);
				_localctx.flagArray.add(objectFlag1);

				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == OR) {
					{
						{
							setState(73);
							match(OR);
							setState(74);
							((FlagsContext) _localctx).flag2 = match(TEXT);

							String flag2String = "OF_" + ((FlagsContext) _localctx).flag2.getText().trim();
							ObjectFlag objectFlag2 = ObjectFlag.valueOf(flag2String);
							_localctx.flagArray.add(objectFlag2);

						}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValuesContext extends ParserRuleContext {
		public HashMap<ValueEnum, Integer> valueCollection;
		public Token tag1;
		public Token val1;
		public Token tag2;
		public Token val2;

		public TerminalNode VALUES() {
			return getToken(CurseReaderParser.VALUES, 0);
		}

		public List<TerminalNode> TEXT() {
			return getTokens(CurseReaderParser.TEXT);
		}

		public TerminalNode TEXT(int i) {
			return getToken(CurseReaderParser.TEXT, i);
		}

		public List<TerminalNode> VALUE() {
			return getTokens(CurseReaderParser.VALUE);
		}

		public TerminalNode VALUE(int i) {
			return getToken(CurseReaderParser.VALUE, i);
		}

		public List<TerminalNode> OR() {
			return getTokens(CurseReaderParser.OR);
		}

		public TerminalNode OR(int i) {
			return getToken(CurseReaderParser.OR, i);
		}

		public ValuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_values;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).enterValues(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CurseReaderListener) ((CurseReaderListener) listener).exitValues(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CurseReaderVisitor)
				return ((CurseReaderVisitor<? extends T>) visitor).visitValues(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValuesContext values() throws RecognitionException {
		ValuesContext _localctx = new ValuesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_values);
